fix:spacing

--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ nav button:hover{
         flex-direction: column;
         margin-top: 80px;
         padding: 0 3em;
+        padding-bottom: 30px;
     }
     
     .cards {
@@ -296,7 +297,7 @@ nav button:hover{
     }
 }
 
-@media screen and (max-width:375px){
+@media screen and (min-width:375px) and (max-width:500px){
     header {
         background-color: hsl(193, 100%, 96%);
         padding: 30px;
@@ -361,7 +362,7 @@ nav button:hover{
     }
     
     #intro-text button{
-        margin: 5% 15% 8% 15%;
+        margin: 5% 20% 8% 20%;
         height: 40px;
         border-radius: 50px;
         width: 200px;
@@ -379,6 +380,7 @@ nav button:hover{
         justify-items: center;
         flex-direction: column;
         margin-top: 50px;
+        padding-bottom: 30px;
         /* padding-left: 0;  */
         /* width: 90%;   */
     }
@@ -563,7 +565,7 @@ nav button:hover{
 
 }
 
-@media screen and (min-width:375px) and (max-width:500px){
+@media screen and (max-width:375px){
     header {
         background-color: hsl(193, 100%, 96%);
         padding: 30px;
@@ -628,7 +630,7 @@ nav button:hover{
     }
     
     #intro-text button{
-        margin: 5% 20% 8% 20%;
+        margin: 5% 15% 8% 15%;
         height: 40px;
         border-radius: 50px;
         width: 200px;
@@ -646,6 +648,7 @@ nav button:hover{
         justify-items: center;
         flex-direction: column;
         margin-top: 50px;
+        padding-bottom: 50px;
         /* padding-left: 0;  */
         /* width: 90%;   */
     }
